# vulkan_engine

./: .gitignore  .mailmap  CMakeLists.txt  README.md  envWindowsExample.cmake  unixBuild.sh  windowsBuild.bat
app/src/: main.cpp  sandbox.cpp  sandbox.hpp  ve_app.cpp  ve_app.hpp
cmake/: Dependencies.cmake  Leaks.cmake  Options.cmake  Shaders.cmake  Targets.cmake  Tests.cmake
engine/src/: pch.hpp  ve_config.hpp  ve_export.hpp
engine/src/core/: ve_application.cpp  ve_application.hpp  ve_buffer.cpp  ve_buffer.hpp  ve_compute_pipeline.cpp  ve_compute_pipeline.hpp  ve_descriptors.cpp  ve_descriptors.hpp  ve_device.cpp  ve_device.hpp  ve_entry_point.hpp  ve_file_system.cpp  ve_file_system.hpp  ve_image.cpp  ve_image.hpp  ve_pipeline.cpp  ve_pipeline.hpp  ve_renderer.cpp  ve_renderer.hpp  ve_swap_chain.cpp  ve_swap_chain.hpp  ve_texture.cpp  ve_texture.hpp  ve_window.cpp  ve_window.hpp
engine/src/game/: ve_camera.cpp  ve_camera.hpp  ve_frame_info.hpp  ve_game_object.cpp  ve_game_object.hpp  ve_model.cpp  ve_model.hpp  ve_scene.hpp
engine/src/input/: input_controller.cpp  input_controller.hpp
engine/src/systems/: axes_render_system.cpp  axes_render_system.hpp  particle_system.cpp  particle_system.hpp  point_light_system.cpp  point_light_system.hpp  simple_render_system.cpp  simple_render_system.hpp  skybox_render_system.cpp  skybox_render_system.hpp
engine/src/ui/: imgui_layer.cpp  imgui_layer.hpp
engine/src/utils/: ve_log.hpp
include/VEngine/: VEngine.hpp
shaders/: axes_shader.slang  particle_compute.slang  point_light_shader.slang  simple_shader.frag  simple_shader.slang  simple_shader.vert  skybox_shader.slang
src/: input_controller.cpp  input_controller.hpp  main.cpp  pch.hpp  simple_render_system.cpp  simple_render_system.hpp  ve_app.cpp  ve_app.hpp  ve_buffer.cpp  ve_buffer.hpp  ve_camera.cpp  ve_camera.hpp  ve_compute_pipeline.cpp  ve_compute_pipeline.hpp  ve_config.hpp  ve_descriptors.cpp  ve_descriptors.hpp  ve_device.cpp  ve_device.hpp  ve_frame_info.hpp  ve_game_object.cpp  ve_game_object.hpp  ve_image.cpp  ve_image.hpp  ve_log.hpp  ve_model.cpp  ve_model.hpp  ve_pipeline.cpp  ve_pipeline.hpp  ve_renderer.cpp  ve_renderer.hpp  ve_swap_chain.cpp  ve_swap_chain.hpp  ve_texture.cpp  ve_texture.hpp  ve_window.cpp  ve_window.hpp
src/systems/: axes_render_system.cpp  axes_render_system.hpp  particle_system.cpp  particle_system.hpp  point_light_system.cpp  point_light_system.hpp  simple_render_system.cpp  simple_render_system.hpp  skybox_render_system.cpp  skybox_render_system.hpp
src/ui/: imgui_layer.cpp  imgui_layer.hpp
tests/: test_buffer_alignment.cpp  test_camera.cpp  test_config.cpp  test_pipeline_config.cpp
